Fixed mobile view overflow problem in results   * Closes #12

--- a/css/coptic_dictionary.css
+++ b/css/coptic_dictionary.css
@@ -30,7 +30,6 @@ body{
 #results td{font-family: antinoouRegular, sans-serif;}
 #senses td{font-family: antinoouRegular, sans-serif;}
 .entrylist td{font-family: antinoouRegular, sans-serif;}
-.sense_cell{min-width: 200px;}
 #results td.pos_cell{min-width: 200px; color: grey; font-size: small}
 .orth_cell,.related_orth{min-width: 100px;}
 .second_orth_cell{min-width: 100px;color: grey}
